# EECampEdu

./: .gitignore  README.md  imgui.ini
apps/: README.md
apps/esp32_cam_input_app/: CMakeLists.txt  README.md
apps/esp32_cam_input_app/src/: main.cpp
apps/esp32_cam_input_app/src/App/: App.cpp  App.hpp  AppState.cpp  AppState.hpp
apps/esp32_cam_input_app/src/Image/: JpegDecoder.cpp  JpegDecoder.hpp
apps/esp32_cam_input_app/src/Usb/: UsbCdcClient.cpp  UsbCdcClient.hpp
apps/esp32_cam_input_app/src/Windows/: CameraViewerWin.cpp  CameraViewerWin.hpp  ControlsWin.cpp  ControlsWin.hpp
apps/local_camera_app/: README.md  preview_app.py
apps/local_flash_helper/: README.md  flash_helper.py
apps/training_portal/: DEPLOYMENT.md  README.md  server.py
deploy/: eecamp-portal.env.example  eecampctl.sh  install_services.sh
deploy/systemd/: eecamp-camera-app.service.in  eecamp-portal.service.in
docs/: AIPC_SERVER_README.md  LOCAL_LEGACY_README.md  STUDENT_README.md  WEBSITE_INTERNAL_GUIDE.en.md  WEBSITE_INTERNAL_GUIDE.zh-TW.md  file_structure.md  integration_contract.md
docs/unit_tests/: camera_unit_test.md  deploy_unit_test.md  input_unit_test.md  model_unit_test.md  output_unit_test.md  usb_unit_test.md
esp/: README.md  flash_photo.py  flash_tflite_model.py  partitions.csv  sdkconfig  sdkconfig.defaults
esp/main/: CMakeLists.txt  Separable_CNN_int8.tflite  idf_component.yml
esp/main/include/: camera_capture.hpp  model_config.hpp
esp/main/src/: app_main.cpp
esp/model/: model_define.hpp  model_offsets.h
firmware/: .gitignore  README.md
firmware/camera_usb_demo/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
firmware/camera_usb_demo/main/: CMakeLists.txt
firmware/camera_usb_demo/main/include/: input_controls.hpp  model_config.hpp
firmware/camera_usb_demo/main/src/: app_main.cpp  camera_capture_ov2640.cpp  input_controls.cpp
firmware/control_board/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
firmware/deploy_benchmark/: CMakeLists.txt  sdkconfig
firmware/docs/: file_structure.md  integration_contract.md  system_overview.md  test_plan.md
firmware/esp/: README.md  (+4 more)
model_finetune/: .gitignore  README.md  class_map.example.json  class_map.py  collect_data.py  ei-yee2-transfer-learning-tensorflow-lite-int8-quantized-model.5.lite  train.py  train_128.py  train_96.py  train_and_quantize.py  train_mini_resnet.py  train_mobilenet.py  webcam_demo.py
pc/: README.md  requirements-legacy-onnx.txt  requirements.txt
scripts/: README.md  build_firmware.sh  build_input_app.py  flash_model.sh  flash_photo.sh  run_benchmark.sh  setup_env.py  setup_pc_env.py  setup_pc_env.sh
unit_tests/: README.md
(+163 files in other folders)
